[package]
name = "drive"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.47",features = ["cargo"]}
hex = "0.4.3"
reqwest = {version = "0.12.23",features = ["json"]}
secp256k1 = {version = "0.31.1",features = ["rand","hashes"]}
serde = {version = "1.0.219",features = []}
serde_json = "1.0.143"
shlex = "1.3.0"
tokio = {version = "1.47.1",features = ["full"]}
